<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defenders">Defenders</string>
    <string name="logo_away_team">Logo Away Team</string>
    <string name="logo_home_team">Logo Home Team</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorite_match">Favorite Match</string>
    <string name="favorite">Favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
</resources>
